--- a/src/components/newList/newlist.css
+++ b/src/components/newList/newlist.css
@@ -76,7 +76,7 @@
     font-size: 18px;
 }
 .todo-ul {
-    height: 450px;
+    height: 75%;
     list-style: none;
     padding: 0;
     margin: 0;
