--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgb(172, 171, 171);
+    oveflow: hidden;
 }
 #root > div {
     position: absolute;
@@ -18,7 +19,8 @@ body {
     left: 50%;
     transform: translate(-50%,-50%);
     width: 320px;
-    height: 650px;
+    height: 100%;
+    max-height: 900px;
     background: white;
     overflow: hidden;
 }
